Random Walk Tends To Right

--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
 							href="https://www.youtube.com/watch?v=rqecAdEGW6I&list=PLRqwX-V7Uu6aFlwukCmDf0-1-uSR7mklK&index=2">Video</a>
 					</td>
 				</tr>
+				<tr>
+					<th>Random Walk Tends To Right</th>
+					<td><a href="./src/chp00_introduction/02_RandomWalkTendsToRight/index.html">Example</a></td>
+					<td><a
+							href="https://www.youtube.com/watch?v=frh0coyRmJQ&list=PLRqwX-V7Uu6aFlwukCmDf0-1-uSR7mklK&index=3">Video</a>
+					</td>
+				</tr>
 
 			</tbody>
 		</table>
