--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@
 							href="https://www.youtube.com/watch?v=frh0coyRmJQ&list=PLRqwX-V7Uu6aFlwukCmDf0-1-uSR7mklK&index=3">Video</a>
 					</td>
 				</tr>
+				<tr>
+					<th>Gaussian Distribution</th>
+					<td><a href="./src/chp00_introduction/03_GaussianDistribution/index.html">Example</a></td>
+					<td><a
+							href="https://www.youtube.com/watch?v=8uyR-YU_0dg&list=PLRqwX-V7Uu6aFlwukCmDf0-1-uSR7mklK&index=4">Video</a>
+					</td>
+				</tr>
 
 			</tbody>
 		</table>
