--- a/index.html
+++ b/index.html
@@ -26,27 +26,28 @@
 			</thead>
 
 			<tbody>
+				<!-- Introduction -->
 				<tr>
 					<th colspan="3" class="table-success text-center">Chapter 00 - Introduction</th>
 				</tr>
 
 				<tr>
 					<th>Random Walk Traditional</th>
-					<td><a href="./src/chp00_introduction/01_RandomWalkTraditional/index.html">Example</a></td>
+					<td><a href="./src/chp00_introduction/RandomWalkTraditional/index.html">Example</a></td>
 					<td><a
 							href="https://www.youtube.com/watch?v=rqecAdEGW6I&list=PLRqwX-V7Uu6aFlwukCmDf0-1-uSR7mklK&index=2">Video</a>
 					</td>
 				</tr>
 				<tr>
 					<th>Random Walk Tends To Right</th>
-					<td><a href="./src/chp00_introduction/02_RandomWalkTendsToRight/index.html">Example</a></td>
+					<td><a href="./src/chp00_introduction/RandomWalkTendsToRight/index.html">Example</a></td>
 					<td><a
 							href="https://www.youtube.com/watch?v=frh0coyRmJQ&list=PLRqwX-V7Uu6aFlwukCmDf0-1-uSR7mklK&index=3">Video</a>
 					</td>
 				</tr>
 				<tr>
 					<th>Gaussian Distribution</th>
-					<td><a href="./src/chp00_introduction/03_GaussianDistribution/index.html">Example</a></td>
+					<td><a href="./src/chp00_introduction/GaussianDistribution/index.html">Example</a></td>
 					<td><a
 							href="https://www.youtube.com/watch?v=8uyR-YU_0dg&list=PLRqwX-V7Uu6aFlwukCmDf0-1-uSR7mklK&index=4">Video</a>
 					</td>
