Add Perlin Noise examples

--- a/index.html
+++ b/index.html
@@ -52,6 +52,34 @@
 							href="https://www.youtube.com/watch?v=8uyR-YU_0dg&list=PLRqwX-V7Uu6aFlwukCmDf0-1-uSR7mklK&index=4">Video</a>
 					</td>
 				</tr>
+				<tr>
+					<th>Perlin Noise</th>
+					<td><a href="./src/chp00_introduction/PerlinNoise/index.html">Example</a></td>
+					<td><a
+							href="https://www.youtube.com/watch?v=ikwNrFvnL3g&list=PLRqwX-V7Uu6ZV4yEcW3uDwOgGXKUUsPOM&index=6">Video</a>
+					</td>
+				</tr>
+				<tr>
+					<th>Noise 2D</th>
+					<td><a href="./src/chp00_introduction/Noise2D/index.html">Example</a></td>
+					<td><a
+							href="https://www.youtube.com/watch?v=YcdldZ1E9gU&list=PLRqwX-V7Uu6ZV4yEcW3uDwOgGXKUUsPOM&index=4">Video</a>
+					</td>
+				</tr>
+				<tr>
+					<th>Noise Graphing 1D</th>
+					<td><a href="./src/chp00_introduction/NoiseGraphing1D/index.html">Example</a></td>
+					<td><a
+							href="https://www.youtube.com/watch?v=y7sgcFhk6ZM&list=PLRqwX-V7Uu6ZV4yEcW3uDwOgGXKUUsPOM&index=5">Video</a>
+					</td>
+				</tr>
+				<tr>
+					<th>Random Static</th>
+					<td><a href="./src/chp00_introduction/RandomStatic/index.html">Example</a></td>
+					<td><a
+							href="https://www.youtube.com/watch?v=ikwNrFvnL3g&list=PLRqwX-V7Uu6ZV4yEcW3uDwOgGXKUUsPOM&index=6">Video</a>
+					</td>
+				</tr>
 
 			</tbody>
 		</table>
