--- a/index.html
+++ b/index.html
@@ -80,6 +80,11 @@
 							href="https://www.youtube.com/watch?v=ikwNrFvnL3g&list=PLRqwX-V7Uu6ZV4yEcW3uDwOgGXKUUsPOM&index=6">Video</a>
 					</td>
 				</tr>
+				<tr>
+					<th>Random Distribution</th>
+					<td><a href="./src/chp00_introduction/RandomDistribution/index.html">Example</a></td>
+					<td>-</td>
+				</tr>
 
 			</tbody>
 		</table>
