Add Bouncing Ball Vector and Random Vector 2D

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 			<thead class="bg-dark text-light">
 				<tr>
 					<th scope="col">Name</th>
-					<th scope="col">Web Site</th>
-					<th scope="col">Source Code</th>
+					<th scope="col">Example</th>
+					<th scope="col">Based</th>
 				</tr>
 			</thead>
 
@@ -35,55 +35,78 @@
 					<th>Random Walk Traditional</th>
 					<td><a href="./src/chp00_introduction/RandomWalkTraditional/index.html">Example</a></td>
 					<td><a
-							href="https://www.youtube.com/watch?v=rqecAdEGW6I&list=PLRqwX-V7Uu6aFlwukCmDf0-1-uSR7mklK&index=2">Video</a>
+							href="https://www.youtube.com/watch?v=rqecAdEGW6I&list=PLRqwX-V7Uu6aFlwukCmDf0-1-uSR7mklK&index=2">Youtube</a>
 					</td>
 				</tr>
 				<tr>
 					<th>Random Walk Tends To Right</th>
 					<td><a href="./src/chp00_introduction/RandomWalkTendsToRight/index.html">Example</a></td>
 					<td><a
-							href="https://www.youtube.com/watch?v=frh0coyRmJQ&list=PLRqwX-V7Uu6aFlwukCmDf0-1-uSR7mklK&index=3">Video</a>
+							href="https://www.youtube.com/watch?v=frh0coyRmJQ&list=PLRqwX-V7Uu6aFlwukCmDf0-1-uSR7mklK&index=3">Youtube</a>
 					</td>
 				</tr>
 				<tr>
 					<th>Gaussian Distribution</th>
 					<td><a href="./src/chp00_introduction/GaussianDistribution/index.html">Example</a></td>
 					<td><a
-							href="https://www.youtube.com/watch?v=8uyR-YU_0dg&list=PLRqwX-V7Uu6aFlwukCmDf0-1-uSR7mklK&index=4">Video</a>
+							href="https://www.youtube.com/watch?v=8uyR-YU_0dg&list=PLRqwX-V7Uu6aFlwukCmDf0-1-uSR7mklK&index=4">Youtube</a>
 					</td>
 				</tr>
 				<tr>
 					<th>Perlin Noise</th>
 					<td><a href="./src/chp00_introduction/PerlinNoise/index.html">Example</a></td>
 					<td><a
-							href="https://www.youtube.com/watch?v=ikwNrFvnL3g&list=PLRqwX-V7Uu6ZV4yEcW3uDwOgGXKUUsPOM&index=6">Video</a>
+							href="https://www.youtube.com/watch?v=ikwNrFvnL3g&list=PLRqwX-V7Uu6ZV4yEcW3uDwOgGXKUUsPOM&index=6">Youtube</a>
 					</td>
 				</tr>
 				<tr>
 					<th>Noise 2D</th>
 					<td><a href="./src/chp00_introduction/Noise2D/index.html">Example</a></td>
 					<td><a
-							href="https://www.youtube.com/watch?v=YcdldZ1E9gU&list=PLRqwX-V7Uu6ZV4yEcW3uDwOgGXKUUsPOM&index=4">Video</a>
+							href="https://www.youtube.com/watch?v=YcdldZ1E9gU&list=PLRqwX-V7Uu6ZV4yEcW3uDwOgGXKUUsPOM&index=4">Youtube</a>
 					</td>
 				</tr>
 				<tr>
 					<th>Noise Graphing 1D</th>
 					<td><a href="./src/chp00_introduction/NoiseGraphing1D/index.html">Example</a></td>
 					<td><a
-							href="https://www.youtube.com/watch?v=y7sgcFhk6ZM&list=PLRqwX-V7Uu6ZV4yEcW3uDwOgGXKUUsPOM&index=5">Video</a>
+							href="https://www.youtube.com/watch?v=y7sgcFhk6ZM&list=PLRqwX-V7Uu6ZV4yEcW3uDwOgGXKUUsPOM&index=5">Youtube</a>
 					</td>
 				</tr>
 				<tr>
 					<th>Random Static</th>
 					<td><a href="./src/chp00_introduction/RandomStatic/index.html">Example</a></td>
 					<td><a
-							href="https://www.youtube.com/watch?v=ikwNrFvnL3g&list=PLRqwX-V7Uu6ZV4yEcW3uDwOgGXKUUsPOM&index=6">Video</a>
+							href="https://www.youtube.com/watch?v=ikwNrFvnL3g&list=PLRqwX-V7Uu6ZV4yEcW3uDwOgGXKUUsPOM&index=6">Youtube</a>
 					</td>
 				</tr>
 				<tr>
 					<th>Random Distribution</th>
 					<td><a href="./src/chp00_introduction/RandomDistribution/index.html">Example</a></td>
-					<td>-</td>
+					<td><a
+							href="https://github.com/nature-of-code/noc-examples-p5.js/tree/master/chp00_introduction/NOC_I_02_RandomDistribution">GitHub</a>
+					</td>
+				</tr>
+
+				<!-- Vectors -->
+				<tr>
+					<th colspan="3" class="table-success text-center">Chapter 01 - Vectors</th>
+				</tr>
+
+				<tr>
+					<th>Bouncing Ball Vector</th>
+					<td><a href="./src/chp01_vectors/BouncingBallVector/index.html">Example</a></td>
+					<td><a
+							href="https://github.com/nature-of-code/noc-examples-p5.js/tree/master/chp01_vectors/NOC_1_02_bouncingball_vectors">GitHub</a>
+					</td>
+				</tr>
+
+				<tr>
+					<th>Random Vector 2D</th>
+					<td><a href="./src/chp01_vectors/RandomVector2D/index.html">Example</a></td>
+					<td><a
+							href="https://www.youtube.com/watch?v=jupjuq9Jl-M&list=PLRqwX-V7Uu6ZV4yEcW3uDwOgGXKUUsPOM&index=12">Youtube</a>
+					</td>
 				</tr>
 
 			</tbody>
