Add Accelaration, Acceleration Mouse and Vector Mouse

--- a/index.html
+++ b/index.html
@@ -109,6 +109,30 @@
 					</td>
 				</tr>
 
+				<tr>
+					<th>Vector Mouse</th>
+					<td><a href="./src/chp01_vectors/VectorMouse/index.html">Example</a></td>
+					<td><a
+							href="https://www.youtube.com/watch?v=ttz05d8DSOs&list=PLRqwX-V7Uu6ZV4yEcW3uDwOgGXKUUsPOM&index=14">Youtube</a>
+					</td>
+				</tr>
+
+				<tr>
+					<th>Acceleration</th>
+					<td><a href="./src/chp01_vectors/Acceleration/index.html">Example</a></td>
+					<td><a
+							href="https://www.youtube.com/watch?v=T84AWnntxZA&list=PLRqwX-V7Uu6ZV4yEcW3uDwOgGXKUUsPOM&index=15">Youtube</a>
+					</td>
+				</tr>
+
+				<tr>
+					<th>Acceleration Mouse</th>
+					<td><a href="./src/chp01_vectors/AccelerationMouse/index.html">Example</a></td>
+					<td><a
+							href="https://www.youtube.com/watch?v=T84AWnntxZA&list=PLRqwX-V7Uu6ZV4yEcW3uDwOgGXKUUsPOM&index=15">Youtube</a>
+					</td>
+				</tr>
+
 			</tbody>
 		</table>
 	</main>
