--- a/src/chp01_vectors/Acceleration/index.html
+++ b/src/chp01_vectors/Acceleration/index.html
@@ -5,11 +5,11 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Random Vector 2D</title>
+	<title>Acceleration</title>
 </head>
 
 <body>
-	<h1>Random Vector 2D</h1>
+	<h1>Acceleration</h1>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.55.2/phaser.min.js"
 		integrity="sha512-kg6fSrg6FkD9Ua02PzuA289KatVkTp6HdiFrSKwnz1bKBeKe5JG54rNeYZeghYO/I4ka49rb9H/9Ezcq9Se3iQ=="
