--- a/src/chp00_introduction/Noise2D/index.html
+++ b/src/chp00_introduction/Noise2D/index.html
@@ -6,6 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Noise 2D</title>
+	<link rel="stylesheet" href="../../canvas.min.css">
 </head>
 
 <body>
