--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 	</main>
 
 	<footer>
-		<p class="text-center"><a href="https://gitlab.com/201flaviosilva/Phaser-Nature-of-Code">Source Code</a>
+		<p class="text-center"><a href="https://github.com/201flaviosilva-labs/Phaser-Nature-of-Code">Source Code</a>
 		</p>
 	</footer>
 
